--- a/app/src/main/res/layout/fragment_contract.xml
+++ b/app/src/main/res/layout/fragment_contract.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical"
     android:padding="10dp">
 
+    <!--region Title-->
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="40dp">
@@ -34,21 +35,22 @@
         <ImageButton
             android:layout_width="16dp"
             android:layout_height="16dp"
-            android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="10dp"
             android:background="#00000000"
             android:src="@drawable/search_16px"
             android:contentDescription="@string/string_search"
             android:layout_alignParentEnd="true"
-            android:layout_marginEnd="10dp" />
+            android:layout_marginEnd="10dp"
+            android:id="@+id/imgbtnSearch"/>
     </RelativeLayout>
+    <!--endregion-->
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/colorAccent" />
 
+    <!--region Contract Title-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="30dp"
@@ -78,6 +80,7 @@
             android:layout_weight="0.2"
             android:text="@string/contract_change" />
     </LinearLayout>
+    <!--endregion-->
 
     <View
         android:layout_width="match_parent"
