--- a/app/src/main/res/layout/listitem_contract.xml
+++ b/app/src/main/res/layout/listitem_contract.xml
@@ -7,23 +7,25 @@
 
     <RelativeLayout
         android:layout_width="0dp"
-        android:layout_weight="0.5"
         android:layout_height="40dp"
+        android:layout_weight="0.5"
         android:orientation="horizontal">
+
         <TextView
             android:id="@+id/contractSubName"
-            android:gravity="center_vertical"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginLeft="20dp"
-                  />
+            android:gravity="center_vertical" />
+
         <TextView
+            android:id="@+id/contractName"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:id="@+id/contractName"
-            android:textSize="12sp"
-            android:layout_alignBaseline ="@id/contractSubName"
-            android:layout_toEndOf="@id/contractSubName"/>
+            android:layout_alignBaseline="@id/contractSubName"
+            android:layout_toEndOf="@id/contractSubName"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="12sp" />
     </RelativeLayout>
 
     <TextView
