--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#FFF5F5F5</color>
     <color name="colorPrimaryDark">#FF757575</color>
     <color name="colorAccent">#FF009688</color>
+    <color name="colorRed">#FFFF4081</color>
 </resources>
