--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -9,7 +9,7 @@
     tools:context=".StartActivity">
 
 
-    <com.kunxun.future.Utils.GradientView
+    <com.kunxun.future.utils.GradientView
         android:id="@+id/gradientView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
